name:                glucose
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/glucose#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2016 Schell Scivally
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag webgl
  description: Disable the default OpenGL implementation in favor of the WebGL
               implementation.
  default: True

flag ghcjs
  description: Build for ghcjs, which implies WebGL.
  default: False

library
  hs-source-dirs:      src

  if flag(ghcjs)
    build-depends:      base >= 4.7 && < 5
                      , ghcjs-base
                      , ghcjs-dom >= 0.8
                      , jsaddle
                      , jsaddle-dom >= 0.8
                      , mtl
    exposed-modules:    Graphics.Glucose
                      , Graphics.Glucose.WebGL
                      , Graphics.Glucose.Utils
  else
    build-depends:      base >= 4.7 && < 5
                      , mtl
    if flag(webgl)
      build-depends:      ghcjs-dom >= 0.8
                        , jsaddle
                        , jsaddle-dom >= 0.8
      exposed-modules:    Graphics.Glucose
                        , Graphics.Glucose.WebGL
                        , Graphics.Glucose.Utils
    else
      build-depends:      gl
      exposed-modules:    Graphics.Glucose
                        , Graphics.Glucose.OpenGL
                        , Graphics.Glucose.Utils

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/glucose
