name:                gristle
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/gristle#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Graphics.Gristle
  build-depends:       base >= 4.7 && < 5
                     , free
                     , indexed
                     , singletons
                     , rebindable
                     , data-default
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gristle
