name:                glucose-example-sdl2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/glucose#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2016 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable glucose-example-sdl2
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , either
                     , glucose
                     , glucose-example-shared
                     , linear
                     , mtl
                     , sdl2
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/glucose-example
