name:                glucose-example-sdl2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/schell/glucose#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2016 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag Devel
  default: False
  description: Enable dev deps
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Run, Shaders
  build-depends:       async
                     , base >= 4.7 && < 5
                     , either
                     , halive
                     , glucose
                     , glucose-example-shared
                     , ixshader
                     , linear
                     , mtl
                     , sdl2
                     , stm
                     , vector

executable glucose-example-sdl2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , glucose-example-sdl2

  default-language:    Haskell2010

executable hotload
  hs-source-dirs:      src
  main-is:             DevelMain.hs
  other-modules:       Shaders
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       async
                     , base >= 4.7 && < 5
                     , glucose-example-sdl2
                     , either
                     , halive
                     , glucose
                     , glucose-example-shared
                     , ixshader
                     , linear
                     , mtl
                     , sdl2
                     , stm
                     , vector
                     , wavefront

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/schell/glucose-example
