name:                glucose-example-shared
version:             0.1.0.0
-- synopsis:
description:         Shared glucose code for glucose examples.
homepage:            https://github.com/schell/glucose-example-shared#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Glucose.Shared
  build-depends:       base >= 4.7 && < 5
                     , either
                     , glucose
                     , linear
                     , mtl
                     , sdl2
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/glucose-example-shared
