name:                glucose-example-shared
version:             0.1.0.0
-- synopsis:
description:         Shared glucose code for glucose examples.
homepage:            https://github.com/schell/glucose-example-shared#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          efsubenovex@gmail.com
copyright:           Copyright: (c) 2017 Schell Scivally
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag webgl
 description: Disable the default OpenGL implementation in favor of WebGL.
 default: False

flag ghcjs
  description: Build for ghcjs and WebGL
  default: False


library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Glucose.Shared
  other-modules:       Graphics.Glucose.Shared.Shaders
  build-depends:       base >= 4.7 && < 5
                     , either
                     , glucose
                     , gristle
                     , linear
                     , mtl
                     , vector

  if flag(webgl)
     build-depends:  jsaddle, jsaddle-dom
     cpp-options:    -DWebGL
  else
    if !flag(ghcjs)
      build-depends: sdl2

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/glucose-example-shared
